--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,9 @@ input[type="radio"] + label {
      color: black;
 
 }
+.saved-answer-container{
+     border: dotted  rgb(95, 95, 95) 2px;
+     border-radius: 5px;
+     padding: 0.5rem;
+     display: none;
+}
