--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ html {
 }
 
 .content-container {
-     padding: 1rem;
+     padding: 1rem 1.5rem 1rem 1.5rem;
      border-radius: 1.5rem;
      background-color: rgba(255, 255, 255, 0.86);
 }
@@ -174,3 +174,21 @@ input[type="radio"]+label {
      outline: none !important;
      border: solid 2px red;
 }
+.loader {
+     display: inline-block;
+     border: 0.2rem solid #ababab; /* Light grey */
+     border-top: 0.2rem solid #000000; /* Blue */
+     border-radius: 50%;
+     width: 0.7rem;
+     text-align: center;
+     height: 0.7rem;
+     animation: spin 1s linear infinite;
+   }
+   
+   @keyframes spin {
+     0% { transform: rotate(0deg); }
+     100% { transform: rotate(360deg); }
+   }
+   .text-center{
+     text-align:center!important
+   }
